<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:background="@color/ColorPrimary"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/menu_avatar"
            android:id="@+id/circleView"
            />
        <TextView
            android:layout_marginLeft="15dp"
            android:text="@string/head_name_no_login"
            android:id="@+id/tv_head_name"
            android:layout_width="fill_parent"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_head_collect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/favorites"
            android:gravity="center_vertical"
            android:text="@string/my_favorite"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawablePadding="12dp"/>
        <TextView
            android:id="@+id/tv_head_download"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/download"
            android:gravity="center_vertical"
            android:text="@string/download_offline"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawablePadding="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:background="@color/color_f0f0f0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home"
            android:textColor="@color/ColorPrimary"
            android:text="@string/homepage"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>
</LinearLayout>